// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs/rules/close-order.md inline validation: correct-1 1`] = `[]`;

exports[`docs/rules/close-order.md inline validation: correct-2 1`] = `[]`;

exports[`docs/rules/close-order.md inline validation: incorrect-1 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "inline",
    "messages": [
      {
        "column": 13,
        "line": 2,
        "message": "Mismatched close-tag, expected '</strong>' but found '</p>'.",
        "offset": 43,
        "ruleId": "close-order",
        "ruleUrl": "https://html-validate.org/rules/close-order.html",
        "selector": null,
        "severity": 2,
        "size": 2,
      },
      {
        "column": 17,
        "line": 2,
        "message": "Mismatched close-tag, expected '</p>' but found '</strong>'.",
        "offset": 47,
        "ruleId": "close-order",
        "ruleUrl": "https://html-validate.org/rules/close-order.html",
        "selector": null,
        "severity": 2,
        "size": 7,
      },
    ],
    "source": "<!-- closed in wrong order -->
<p><strong></p></strong>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/close-order.md inline validation: incorrect-2 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 6,
        "line": 2,
        "message": "Missing close-tag, expected '</div>' but document ended before it was found.",
        "offset": 36,
        "ruleId": "close-order",
        "ruleUrl": "https://html-validate.org/rules/close-order.html",
        "selector": null,
        "severity": 2,
        "size": 0,
      },
    ],
    "source": "<!-- opened but not closed -->
<div>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/close-order.md inline validation: incorrect-3 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 2,
        "message": "Unexpected close-tag, expected opening tag.",
        "offset": 32,
        "ruleId": "close-order",
        "ruleUrl": "https://html-validate.org/rules/close-order.html",
        "selector": null,
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<!-- closed but not opened -->
</div>",
    "warningCount": 0,
  },
]
`;
